<resources>
    <string name="app_name">DivercityAndroid Challenge</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="last_name">Last Name</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="id">id</string>
    <string name="edit_name">Edit Name</string>
    <string name="save">Save</string>
    <string name="filename">FakeUserDB.txt</string>
</resources>
